--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
 <head>
-<title>Hrxshx (he/him)</title>
+<title>Hrxshx</title>
+<link rel="icon" href="https://i.ibb.co/p31dsrv/favicon-32x32.png">
 <meta charset="utf-8">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Hrxshx (he/him)">
