--- a/index.html
+++ b/index.html
@@ -1,116 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="en">
-<head>
-<title>Hrxshx</title>
-<link rel="icon" href="https://i.ibb.co/p31dsrv/favicon-32x32.png">
-<meta charset="utf-8">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Hrxshx (he/him)">
-<meta property="og:description" content="I'm a guy who develops discord bots, host game servers and play with bunch of pngs to earn money. You can support me through "Referral codes". Business - hrxshx@omg.lol">
-<meta property="og:image" content="https://profile.omg.lol/hrxshx/picture">
-<meta name="viewport" content="width=device-width">
-<link href="https://cdn-a.omg.lol/css/profile/profile.css" rel="stylesheet"><link href="https://profile.alpha.omg.lol/sus/theme" rel="stylesheet"><style>
-  @font-face {
-font-family: 'CookieRun';
-src: url('https://crfont.vercel.app/crbold.woff2');
-font-display: swap;
-}
-
-body {
-font-family: 'CookieRun', 'Mint Grotesk', sans-serif
-}
-li:hover {
-  transform: translateX(-10px);
-  transition: all 0.1s;
-  transition-timing-function: ease(1, 0.8, 0.5, 1);
-}
-li:hover .omg-icon, li:hover .fa-li {
-  transform: rotate(-15deg);
-}
-
-main {
-max-width: 40em;
-}
-
-@keyframes wiggle {
-    0% { transform: rotate(0deg); }
-   60% { transform: rotate(0deg); }
-   65% { transform: scale(120%) rotate(5deg); }
-   85% { transform: scale(125%) rotate(-5deg);}
-   100% { transform: rotate(0deg); }
-}
-
-.fa-badge-check {
-animation: wiggle 2.5s ease infinite;
-transition: 0.5s;
-}</style>
-<script src="https://cdn.jsdelivr.net/gh/litdevs/omgex@latest/OMGEX.js"></script>
-<script>
-window.addEventListener('load', function() {
-    OMGEX({zodiac: "♊", birthday: "June 18", timezone: "Asia/Kolkata", terminalKonami: true, displaySeconds: true});
-});
-</script></head>
-
-<body>
-
-<main>
-
-<div id="profile-picture-container">
-<img alt="hrxshx’s profile picture" id="profile-picture" src="https://i.imgur.com/uL2WKmu.jpeg">
-</div>
-
-<h1 id="name">Hrxshx <a title="This address is verified." style="text-decoration: none; border: 0;" href="#"><i style="font-size: 80%; color: #8400ff;" class="fas fa-badge-check"></i></a></h1>
-
-<div id="pronouns"><a href="https://en.pronouns.page/@hrxshx">he/him</a></div><div id="details">
-
-<div id="occupation"><i class="fas fa-briefcase"></i> <strong>Developer | Designer</strong></div>
-
-<div id="location"><i class="fas fa-map-marker-alt"></i> <strong>India</strong></div></div>
-
-<div id="bio"><p>I'm a guy who develops discord bots, host game servers and play with bunch of pngs to earn money.</strong></p></div>
-
-<div id="profile-items">
-
-<ul class="fa-ul">
-
-</ul><h1 id="contact-me">Contact me!</h1>
-
-<ul class="fa-ul">
-
-<li><span class="fa-li"><i class="fa-solid fa-bed"></i></span>I may not respond immediately, so be patient.</li>
-
-<li><span class="fa-li"><i class="fa-brands fa-discord"></i></span><a rel="me" title="Discord" >Hrxshx#2722</a></li>
-
-<li><span class="fa-li"><i class="far fa-envelope"></i></span><a rel="me" href="mailto:contact@hrxshx.com">contact@hrxshx.com</a></li>
-
-</ul><h1 id="socials">Socials!</h1>
-
-<ul class="fa-ul">
-
-  <li><span class="fa-li"><i class="fa-solid fa-exclamation-triangle"></i></span>Don't contact me here, unless you really need something.</li>
-
-  <li><span class="fa-li"><i class="fa-brands fa-twitter"></i></span><a rel="me" title="Twitter" href="https://twitter.com/hrxshx">hrxshx</a></li>
-
-  <li><span class="fa-li"><i class="fa-brands fa-behance"></i></span><a rel="me" href="https://www.behance.net/Hrxshx">Portfolio</a></li>
-  
-  <li><span class="fa-li"><i class="fa-brands fa-youtube"></i></span><a rel="me" title="YouTube" href="https://youtube.com/c/HrxshxYT">HrxshxYT</a></li>
-  
-  <li><span class="fa-li"><i class="fa-brands fa-github"></i></span><a rel="me" title="GitHub" href="https://github.com/HrxshxYT">HrxshxYT</a></li>
-  
-  <li><span class="fa-li"><i class="fa-brands fa-twitch"></i></span><a rel="me" title="Twitch" href="https://twitch.tv/hrxshx">hrxshx</a></li>
-
-</div>
-
-<div id="footer"><a href="https://www.cookierunfont.com/static/download/License_ko_en.pdf"><i class="fas fa-plug"></i> This Page uses CookieRun Typeface, by Devsisters.</a></div>
-
-</main>
-
-<script>
-window.addEventListener('load', function () {
-	//console.log('hello?');
-}, false);
-</script>
-
-</body>
+<html>
+    <body>
+        <head>
+            <title>
+                Hrxshx©️
+            </title>
+            The site is under Construction 🚧
+        </head>
+    </body>
 </html>
